<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteblue"
    tools:context=".SecondScreen">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="210sp"
        android:layout_height="56sp"
        android:gravity="center"
        android:text="@string/convert"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045">

    </TextView>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="320sp"
        android:layout_height="40sp"
        android:background="@color/white"
        android:hint="@string/inputTheNumber"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341">

    </EditText>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="150sp"
        android:layout_height="54sp"
        android:background="@color/white"
        android:entries="@array/spinner_items"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499">

    </Spinner>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="145sp"
        android:layout_height="21sp"
        android:text="@string/from"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419">

    </TextView>

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="150sp"
        android:layout_height="54sp"
        android:background="@color/white"
        android:entries="@array/spinner_items"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499">

    </Spinner>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="12sp"
        android:layout_height="21sp"
        android:text="@string/in"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419">

    </TextView>

    <Button

        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="50sp"
        android:backgroundTint="@color/green"
        android:text="@string/rasschet"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="Result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.898">

    </Button>

    <TextView
        android:id="@+id/TextView4"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:text="@string/result"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.604">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>